# maos

./: .actrc  .gitattributes  .gitignore  .windsurfrules  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README-ARCHITECTURE.md  README.md  VERSIONING.md  clippy.toml  justfile  rust-toolchain.toml  rustfmt.toml  stack.env
.cargo/: config.toml
.claude/: config.example.json  settings.json
.claude/agents/: adr-specialist.md  api-architect.md  application-architect.md  backend-engineer.md  business-analyst.md  claude-agent-developer.md  claude-command-developer.md  claude-hook-developer.md  code-reviewer.md  data-architect.md  data-scientist.md  devops-engineer.md  frontend-engineer.md  maos-architect.md  maos-hook-developer.md  maos-test-engineer.md  meta-agent.md  mobile-engineer.md  orchestrator.md  prd-specialist.md  product-manager.md  qa-engineer.md  researcher.md  secops-engineer.md  security-architect.md  solution-architect.md  tech-writer.md  tester.md  ux-designer.md
.claude/commands/: prime.md  stfu.md
.claude/hooks/: notification.py  post_tool_use.py  pre_tool_use.py  stop.py  subagent_stop.py  test_hook_performance.py  user_prompt_submit.py
.github/: commit_message_template.md  copilot-instructions.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: feature_request.md  performance.md
.github/workflows/: ci.yml  release-drafter.yml  release.yml
assets/agent-roles/: README.md  analyst.md  api-architect.md  application-architect.md  backend-engineer.md  business-analyst.md  data-architect.md  data_scientist.md  devops.md  frontend-engineer.md  mobile_engineer.md  orchestrator.md  pm.md  qa.md  researcher.md  reviewer.md  security-architect.md  security.md  solution-architect.md  techwriter.md  tester.md  ux-designer.md
crates/maos/: Cargo.toml
crates/maos-app/: Cargo.toml
crates/maos-app/src/: lib.rs
crates/maos-core/: Cargo.toml
crates/maos-core/benches/: logging_benchmarks.rs  messages_bench.rs  metrics_benchmarks.rs  path_benchmarks.rs
crates/maos-core/src/: config.rs  constants.rs  error.rs  hook_events.rs  lib.rs  types.rs
crates/maos-core/src/constants/: limits.rs  mod.rs  sizes.rs
crates/maos-core/src/error/: mod.rs  utils.rs
crates/maos-core/src/io/: messages.rs  mod.rs  processor.rs
crates/maos-core/src/io/tests/: dos_protection_tests.rs  error_handling_tests.rs  memory_tests.rs  type_safety_tests.rs
crates/maos-core/src/logging/: config.rs  init.rs  mod.rs  session.rs
crates/maos-core/src/messages/: hook.rs  mod.rs  notification.rs  session_state.rs  validation.rs
crates/maos-core/src/metrics/: collector.rs  mod.rs  report.rs
crates/maos-core/src/path/: mod.rs  utils.rs  validator.rs
crates/maos-core/src/security/: command.rs  file.rs  json.rs  mod.rs  path.rs  path_validator.rs  resource.rs  resource_validator.rs  traits.rs  validator.rs
crates/maos-core/src/test_utils/: mod.rs
crates/maos-core/src/types/: agent.rs  mod.rs  session.rs  tool.rs
crates/maos-core/tests/: config_tests.rs  constants_tests.rs  error_tests.rs  integration_path_test.rs  integration_test.rs  invalid_paths_test.rs  logging_tests.rs  messages_tests.rs  metrics_tests.rs  path_tests.rs  path_validation_error_tests.rs  property_tests.proptest-regressions  property_tests.rs  security_tests.rs  security_validator_tests.rs  workspace_paths_tests.rs
crates/maos-core/tests/integration/: logging_integration_tests.rs
crates/maos-domain/: Cargo.toml
crates/maos-domain/src/: lib.rs
crates/maos-domain/src/aggregates/: agent.rs  instance.rs  mod.rs  session.rs
crates/maos-domain/src/events/: agent_events.rs  domain_event.rs  mod.rs  orchestration_events.rs  session_events.rs
crates/maos-domain/src/repositories/: agent_repository.rs  instance_repository.rs  mod.rs  session_repository.rs
crates/maos-domain/src/services/: agent_scheduler.rs  mod.rs  orchestration_validator.rs  session_context.rs  session_coordinator.rs
crates/maos-domain/src/value_objects/: agent_id.rs  agent_role.rs  agent_role_templates.rs  mod.rs  role_template_context.rs  session_id.rs  workspace.rs
crates/maos-io/: Cargo.toml
crates/maos-io/src/: lib.rs
crates/maos/benches/: context_bench.rs  dispatcher_bench.rs  handler_performance.rs  io_bench.rs  json_bench.rs  memory_bench.rs  startup_bench.rs
crates/maos/src/: lib.rs  main.rs
crates/maos/src/cli/: commands.rs  context.rs  dispatcher.rs  handler.rs  mod.rs  registry.rs  tests.rs  thread_safety_tests.rs
crates/maos/src/cli/handlers/: mod.rs  notification.rs  post_tool_use.rs  pre_compact.rs  pre_tool_use.rs  session_start.rs  stop.rs  subagent_stop.rs  user_prompt_submit.rs
crates/maos/src/io/: messages.rs  mod.rs  processor.rs  tests.rs
crates/maos/src/io/tests/: dos_protection_tests.rs  error_handling_tests.rs  memory_dos_tests.rs  memory_tests.rs  security_tests.rs  type_safety_tests.rs
crates/maos/src/security/: mod.rs  tests.rs
crates/maos/tests/: cli_tests.rs  cross_platform.rs  e2e_tests.rs  exit_code_integration.rs  io_error_handling_tests.rs  io_tests.rs  security_integration.rs  security_tests.rs  security_unit.proptest-regressions  security_unit.rs  type_safety_tests.rs
crates/maos/tests/common/: mod.rs
docs/: AGENT_INSTRUCTIONS.md  AGENT_INTEGRATION_STRATEGY.md  DEVELOPMENT_WORKFLOW.md  GITHUB_PROJECT_SETUP.md  MAOS-Planning-Summary.md  QUICK_START.md  ROADMAP.md  TROUBLESHOOTING.md  session-management.md  session-patterns.md
docs/architecture/: MAOS-Architecture.md  MAOS-Implementation-Guide.md  MAOS-True-Architecture.md  acp-architecture-overview.md  claude-code-agent-design.md  implementation-roadmap.md  maos-implementation-prd.md  rust-cli-architecture.md
docs/claude-code/: extended-thinking-research.md  prompt-caching-research.md
docs/cli/: commands.md  configuration.md  installation.md  migration.md
docs/development/: release.md  setup.md  testing.md
docs/features/: linting.md  logging.md  orchestration.md  security.md  tts.md
maos-poc/: Cargo.toml  README.md
tests/: exit_code_integration.rs
(+245 files in other folders)
