[workspace]
members = [
    "crates/maos",
    "crates/maos-domain",
    "crates/maos-app",
    "crates/maos-io"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["MAOS Contributors"]
license = "MIT"
repository = "https://github.com/clafollett/maos"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Pinned to 0.8.5 due to syntax error in 0.8.6 (missing 'fn' keyword)
# TODO: Change to "^0.8.7" when 0.8.7+ is released with the fix
sqlx = { version = "=0.8.5", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
glob = "0.3"
