[workspace]
members = ["crates/maos", "crates/maos-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["MAOS Contributors"]
license = "MIT"
repository = "https://github.com/clafollett/maos"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
