[package]
name = "maos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
dunce = "1.0.5"
glob = "0.3.2"
globset = "0.4.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
parking_lot = "0.12"
flate2 = "1.0"
jsonschema = "0.26"
schemars = "0.8"
dirs = "5.0"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
tempfile = "3.13"

[[bench]]
name = "path_benchmarks"
harness = false

[[bench]]
name = "metrics_benchmarks"
harness = false

[[bench]]
name = "logging_benchmarks"
harness = false

[[bench]]
name = "messages_bench"
harness = false
