[package]
name = "maos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dunce = { workspace = true }
path-clean = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
# Unit test dependencies (fast, no I/O)
proptest = { workspace = true }

# Integration test & benchmark dependencies (real I/O)
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "path_benchmarks"
harness = false

[[bench]]
name = "metrics_benchmarks"
harness = false

[[bench]]
name = "logging_benchmarks"
harness = false

[[bench]]
name = "messages_bench"
harness = false

# Integration tests (real I/O)
[[test]]
name = "logging_integration"
path = "tests/integration/logging_integration_tests.rs"
