[package]
name = "maos-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MAOS Domain Layer - Pure business logic"

[dependencies]
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true