[package]
name = "maos-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MAOS Domain Layer - Pure business logic"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
rust-embed = { version = "8.5", features = ["include-exclude"] }
regex = "1.0"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }