[package]
name = "maos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "maos"
path = "src/main.rs"

[dependencies]
maos-core = { path = "../maos-core" }
clap = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "time", "macros", "rt", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
criterion = { workspace = true }
futures = { workspace = true }

[[bench]]
name = "io_bench"
harness = false

[[bench]]
name = "dispatcher_bench"
harness = false

[[bench]]
name = "handler_performance"
harness = false