[package]
name = "maos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "maos"
path = "src/main.rs"

[dependencies]
maos-core = { path = "../maos-core" }
clap = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "time", "macros", "rt", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

# Windows-specific dependencies for memory tracking
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "handleapi"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
criterion = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
# Multi-threaded runtime needed only for benchmarks (Criterion requires it)
# Main app uses single-threaded runtime for faster startup (see main.rs)
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "io_bench"
harness = false

[[bench]]
name = "dispatcher_bench"
harness = false

[[bench]]
name = "handler_performance"
harness = false

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "json_bench"
harness = false

[[bench]]
name = "context_bench"
harness = false
